<resources>
    <string name="app_name">BookHub</string>
    <string name="dashboard">Dashboard</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Developer Details</string>
    <string name="info">About App</string>
    <string name="bookhub">Bookhub</string>

    <string name="open_Drawer">Open Drawer</string>
    <string name="close_Drawer">Close Drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="action_sort">Sort</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="linkedin">Linkedin</string>
    <string name="github">Github</string>


    <string name="about_the_app">This app displays the list of popular books. You can see the full description of each book.
        You can also add a book to favorites and remove a book from favorites.
        The app also has other screens such as a Developers Profile Page which tell you about the developer that made the app.
        And an About App Page which tell you about the App.
    </string>
    <string name="about_the_book">About the Book</string>

</resources>