<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<!-- checkableBehavior attribute allows a single item selection at a time from menuItems... -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/id_Dashboard"
            android:title="@string/dashboard"
            android:icon="@drawable/dashboard"/>
        <item
            android:id="@+id/id_Favorites"
            android:title="@string/favorites"
            android:icon="@drawable/favorite"/>
        <item
            android:id="@+id/id_Profile"
            android:title="@string/profile"
            android:icon="@drawable/profile"/>
        <item
            android:id="@+id/id_info"
            android:title="@string/info"
            android:icon="@drawable/info"/>
    </group>

</menu>