<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".fragments.Profile">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_devInstagram"
        android:layout_margin="20dp"
        android:text="@string/instagram"
        android:textStyle="bold"
        android:backgroundTint="@color/instagram"
        android:padding="15dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="#f5f5f5"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_devFacebook"
        android:layout_margin="20dp"
        android:text="@string/facebook"
        android:textStyle="bold"
        android:padding="15dp"
        android:backgroundTint="@color/facebook"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="#f5f5f5"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_devLinkedin"
        android:layout_margin="20dp"
        android:text="@string/linkedin"
        android:textStyle="bold"
        android:padding="15dp"
        android:backgroundTint="@color/linkedin"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="#f5f5f5"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_devGithub"
        android:layout_margin="20dp"
        android:text="@string/github"
        android:textStyle="bold"
        android:padding="15dp"
        android:backgroundTint="@color/github"
        />

</LinearLayout>